[gd_scene load_steps=6 format=2]

[ext_resource path="res://menu/Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://settings/Settings.tscn" type="PackedScene" id=3]
[ext_resource path="res://sort/Sort.tscn" type="PackedScene" id=4]
[ext_resource path="res://theme/touch_theme.tres" type="Theme" id=5]

[node name="Main" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 2 )

[node name="Menu" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 900.0
margin_bottom = 1000.0

[node name="VBoxContainer" parent="Menu" index="0"]
margin_right = 900.0
margin_bottom = 1000.0

[node name="Sort" parent="Menu/VBoxContainer" index="0"]
margin_top = 413.0
margin_right = 900.0
margin_bottom = 455.0

[node name="Settings" parent="Menu/VBoxContainer" index="1"]
margin_top = 479.0
margin_right = 900.0
margin_bottom = 521.0

[node name="Exit" parent="Menu/VBoxContainer" index="2"]
margin_top = 545.0
margin_right = 900.0
margin_bottom = 587.0

[node name="Settings" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="Sort" parent="." instance=ExtResource( 4 )]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="Control" type="Control" parent="."]
margin_right = 900.0
margin_bottom = 1000.0
mouse_filter = 2

[node name="FolderSetupError" type="AcceptDialog" parent="Control"]
margin_left = 384.0
margin_top = 172.0
margin_right = 597.0
margin_bottom = 230.0
dialog_text = "Folders are not setup properly!"

[connection signal="pressed" from="Menu/VBoxContainer/Sort" to="." method="_on_Sort_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="back" from="Settings" to="." method="_on_Settings_back"]

[editable path="Menu"]
